--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
   <meta name="msapplication-TileColor" content="#00aba9">
   <link href="https://fonts.cdnfonts.com/css/raleway-5" rel="stylesheet">
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
   <script>
     (function () {
       const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
@@ -20,6 +19,6 @@
 <body class="font-sans">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script> -->
+  <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
 </body>
 </html>
